# indigo-ai-agent

./: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  prisma.config.ts  tsconfig.tsbuildinfo
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai-service/: demo.py  main.py  pyproject.toml  test_name_detection.py  ws_handler.py
ai-service/agents/: __init__.py  dispatch_agent.py  name_detection_agent.py  vehicle_sound_agent.py
ai-service/myindigo_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/adk_service/app/: orchestrator.py  prompts.py  runtime.py
docs/: decision-log.md
docs/superpowers/plans/: 2026-03-27-ai-service-backend.md
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/debug/architect/: route.ts
src/app/api/debug/context/: route.ts
src/app/api/debug/pipeline/: route.ts
src/app/api/health/: route.ts
src/app/demo/: page.tsx
src/app/gemini/: page.tsx
src/components/: AgentPanel.tsx  AuthScreen.tsx  DemoScreen.tsx  PhoneMockup.tsx  WatchMockup.tsx
src/hooks/: useAudioCapture.ts
src/lib/: supabaseClient.ts
src/lib/env/: client.ts  server.ts
src/lib/gemini/: client.ts
src/lib/supabase/: browser.ts  server.ts
src/server/: db.ts
src/server/agents/: architect-fixtures.ts  context-fixtures.ts  context.ts  executor-fixtures.ts  executor.ts  listen-fixtures.ts  listen.ts  pipeline-fixtures.ts  pipeline.ts
src/types/: index.ts  live-agent.ts
tests/: README.md
(+2 files in other folders)
